--- a/style.css
+++ b/style.css
@@ -278,7 +278,15 @@ nav a:hover {
   color: #3b82f6;
 
 }
-
+nav span {
+  
+    font-size: 16px;
+  
+    font-weight: bold;
+  
+    margin-bottom: 5px;
+  
+}
 
 
 .hero {
