--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ nav a:hover {
   color: #3b82f6;
 
 }
+
 nav span {
   
     font-size: 16px;
@@ -285,6 +286,8 @@ nav span {
     font-weight: bold;
   
     margin-bottom: 5px;
+
+    margin-left: 20px;
   
 }
 
