--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,6 +43,26 @@ h2 {
     text-align: center;
     margin-bottom: 20px;
 }
+
+.logo-text {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.1;
+}
+
+.site-title {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #1e3a8a; 
+  margin: 0;
+}
+
+.site-tagline {
+  font-size: 0.72rem;
+  color: #475569;
+  margin: 0;
+}
+
 footer {
   background: white;
   text-align: center;
